[package]
name = "ciborium-basic"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = "1.6"

[dev-dependencies]
rstest = "0.6"
hex = "0.4"
