[package]
name = "ciborium-tokio"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium-serde = { path = "../ciborium-serde", features = ["std"] }
tokio-util = { version = "0.5", features = ["codec"] }
bytes = "0.6"
serde = "1.0"
