[package]
name = "ciborium"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
license = "Apache-2.0"
edition = "2018"
homepage = "https://github.com/enarx/ciborium"
repository = "https://github.com/enarx/ciborium"
description = "serde implementation of CBOR using ciborium-basic"
readme = "README.md"
keywords = ["cbor", "serde"]
categories = ["data-structures", "embedded", "encoding", "no-std", "parsing"]

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/ciborium", workflow = "test" }
#github = { repository = "enarx/ciborium", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/ciborium" }
is-it-maintained-open-issues = { repository = "enarx/ciborium" }

[dependencies]
ciborium-ll = { path = "../ciborium-ll" }
ciborium-io = { path = "../ciborium-io", features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

[dev-dependencies]
rstest = "0.6"
rand = "0.8"
hex = "0.4"

[features]
default = ["std"]
std = ["ciborium-io/std", "serde/std"]
